# countdown-organizer

./: .gitignore  README.md
angular/: .gitignore  angular.json  create-env.js  package-lock.json  package.json
angular/src/: index.html
angular/src/api/: api.service.ts
angular/src/app/about/: about.component.css  about.component.html  about.component.ts
angular/src/app/add-new-event/: add-new-event.component.css  add-new-event.component.html  add-new-event.component.ts
angular/src/app/api/: api.service.ts
angular/src/app/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
angular/src/app/edit-event/: edit-event.component.ts
angular/src/app/event-details/: event-details.component.css  event-details.component.html  event-details.component.ts
angular/src/app/home-event-item/: home-event-item.component.css  home-event-item.component.html  home-event-item.component.spec.ts  home-event-item.component.ts
angular/src/models/: Event.ts
angular/src/stores/: EventStore.ts
cplusplus/: .gitignore  CMakeLists.txt
flaskProject/: .gitignore  app.py  db.py  models.py  requirements.txt  route_helpers.py  routes.py  s3.py  s3_upload.py
node-express/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
node-express/src/: Event.ts  index.ts  routes.ts
node-express/src/models/: Attribute.ts  Cologne.ts  Manufacturer.ts
node-express/src/routes/: base.ts  colognes.ts  manufacturers.ts
rust/: .gitignore  Cargo.toml
rust/src/: event_model.rs  event_models.rs  event_repo.rs  event_routes.rs  events_api.rs  main.rs
(+6 files in other folders)
